# Alcub3-Impact

./: .gitignore  LICENSE  README.md
.github/workflows/: ci.yml
api/: README.md
app/: README.md  package-lock.json  package.json  wrangler.jsonc
app/src/app/: globals.css  layout.tsx  page.tsx  robots.ts  sitemap.ts
app/src/app/account/: page.tsx
app/src/app/answers/: page.tsx
app/src/app/footprint/: page.tsx
app/src/app/impact-api/: page.tsx
app/src/app/methodology/: page.tsx
app/src/app/observatory/: page.tsx
app/src/components/: access-ladder.tsx  access-request-form.tsx  concern-card.tsx  impact-hero-globe.tsx  nav.tsx  score-ring.tsx  site-footer.tsx
docs/: CLI.md  CONTRIBUTING.md  METHODOLOGY.md  NAMING.md  RESEARCH.md  ROADMAP.md  SECURITY.md  SOURCES.md  VISION.md
observatory/: README.md
observatory/scripts/: common.py  compute_ndwi.py  detect_water.py  download_imagery.py  process_region.py
waterwatch/: README.md  pyproject.toml
waterwatch/basinkit/: __init__.py  benchmarks.py  catalog.py  cli.py  climate.py  core.py  footprint.py  quality.py  satellite.py  score.py
waterwatch/benchmarks/: README.md  reference-locations-2026-04-09.md
waterwatch/examples/: company_footprint.py  quickstart.py  reference_benchmarks.py
waterwatch/notebooks/: quickstart.ipynb  reference_locations.ipynb
waterwatch/tests/: test_cli.py  test_evidence_tiers.py  test_footprint.py  test_quality.py  test_score.py
waterwatch/waterwatch/: __init__.py  benchmarks.py  catalog.py  cli.py  climate.py  core.py  footprint.py  quality.py  satellite.py  score.py
waterwatch/waterwatch/data/: reference_locations.json
(+6 files in other folders)
