[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "waterwatch"
version = "0.1.0"
description = "Open-source toolkit for water intelligence primitives and public-data connectors"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "ALCUB3 Impact", email = "impact@alcub3.com"},
]
keywords = ["water", "hydrology", "geospatial", "satellite", "environmental-data", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Hydrology",
]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
    "geojson>=3.0",
]

[project.urls]
Homepage = "https://impact.alcub3.com"
Repository = "https://github.com/akiyaani2/Alcub3-Impact"
Documentation = "https://github.com/akiyaani2/Alcub3-Impact/tree/main/docs"

[project.scripts]
basinkit = "waterwatch.cli:main"

[project.optional-dependencies]
satellite = [
    "rasterio>=1.3",
    "numpy>=1.26",
    "sentinelsat>=1.2",
]
ml = [
    "torch>=2.2",
    "segment-geospatial>=0.10",
]
all = ["waterwatch[satellite,ml]"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.3",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
waterwatch = ["data/*.json"]

[tool.ruff]
line-length = 100
target-version = "py310"
